--- a/items/active/weapons/ranged/longbow/bownames.config
+++ b/items/active/weapons/ranged/longbow/bownames.config
@@ -5,7 +5,7 @@
       { "mode" : "serie" },
       [ { "mode" : "alts" }, "Manaticon ", "Rotik ", "Callox ", "Graxus ", "Xia-Li ", "Shade Co. ", "Necrolix ", "Teklacki " ],
       [ { "mode" : "alts" }, "Star", "Impact", "Psi", "Riot", "Skull", "Tsunami", "Force", "Galaxy", "Wave", "Moon", "Talon", "Focus", "Nexus", "Luna", "Poly", "Pixel", "Terra", "Solar", "Storm", "Planet", "Perfect", "Soul", "Heart", "Mountain", "Terror", "Nebula", "Nimbus", "Celestial", "Sky", "Ocean", "Ether", "Reality", "Matter", "Light", "Void", "Fusion", "Phase", "Dawn", "Dusk", "Flux", "Cyclone", "Atomic", "Astral", "Comet", "Warden", "Howl", "Pulse" ],
-      [ { "mode" : "alts" }, "sprayer", "stopper", "sprinkler", "blaster", "howitzer", "pitcher", "tosser", "wrecker", "destroyer", "ruin", "sinner", "slayer", "plugger", "enforcer", "pump", "expeller", "barrage", "terror"   ]
+      [ { "mode" : "alts" }, "sprayer", "stopper", "sprinkler", "blaster", "howitzer", "pitcher", "tosser", "wrecker", "destroyer", "ruin", "sinner", "slayer", "plugger", "enforcer", "pump", "expeller", "barrage", "draw", "terror", "reach", "sigh", "mark", "end", "chord", "pain", "curve", "pierce", "piercer", "shot", "shoot", "shooter", "bow", "snipe", "sniper", "force", "struck", "fire", "arch", "fury", "wit", "foe", "gift", "call", "caller", "cry", "crier", "weep", "weeper", "favor", "branch", "wind", "breeze", "song", "singer"  ]
     ]
   ]
 }
