--- a/items/active/weapons/ranged/spellbook/sbnames.config
+++ b/items/active/weapons/ranged/spellbook/sbnames.config
@@ -5,7 +5,7 @@
       { "mode" : "serie" },
       [ { "mode" : "alts" }, "Manaticon ", "Rotik ", "Callox ", "Graxus ", "Xia-Li ", "Shade Co. ", "Necrolix ", "Teklacki " ],
       [ { "mode" : "alts" }, "Star", "Psi", "Force", "Wave", "Moon", "Talon", "Nexus", "Luna", "Solar", "Storm", "Soul", "Heart", "Terror", "Nebula", "Sky", "Ether", "Matter", "Light", "Void", "Fusion", "Phase", "Dawn", "Dusk", "Flux", "Astral", "Comet", "Howl", "Pulse" ],
-      [ { "mode" : "alts" }, "call", "caller", "cry", "crier", "weep", "weeper", "summoner", "caster", "cast", "breaker", "break", "linker", "link", " Beacon", " Lens", " Focus", "-Tome", " Grimoire", " Handbook", "book", "tome", "favor", "gift", "siphon", "binder", "script", " Manuscript", "ancy", "scroll", "icon", "pact", "ward", "reach", " Codex", " Ledger", "keeper", " Syllabus", "song", "singer", "secret", " Manual", "spell", " Magic", " Compendium" ]
+      [ { "mode" : "alts" }, "call", "caller", "cry", "crier", "weep", "weeper", "summoner", "caster", "cast", "breaker", "break", "linker", "link", " Beacon", " Lens", " Focus", "-Tome", " Grimoire", " Handbook", "book", "tome", "favor", "gift", "siphon", "binder", "script", " Manuscript", "ancy", "scroll", "icon", "pact", "ward", "reach", " Codex", " Ledger", "keeper", " Syllabus", "song", "singer", "secret", " Manual", "spell", " Magic", " Compendium", " Page", " Pages", "page" ]
     ]
   ]
 }
